--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4,11 +4,31 @@
 % "clrsAlgorithms" is a citation key, and if you were citing the source in a
 % document you would use \cite{clrsAlgorithms}.
 @book{clrsAlgorithms,
-author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
-title = {Introduction to Algorithms, Third Edition},
-year = {2009},
-isbn = {0262033844},
-publisher = {The MIT Press},
-edition = {3rd},
-annote  = {This is a popular algorithms textbook which is well-cited. In particular, Part VI on graph algorithms will be of interest. Chapter 26 discusses flow networks and introduces commonly used notation. It formally describes the problem of obtaining a maximum flow and its equivalence to obtaining a minimum cut. The classical method of Ford and Fulkerson's algorithm for finding a maximum flow is described, and it includes several examples. Additional methods for obtaining a maximum flow, including the push-relabel method, are also described. The chapter notes include additional references to specific articles which may be helpful, such as those of historical interest (the article in which an algorithm was originally proposed) as well as state-of-the-art improvements (more recent articles to improve the approach).}
+  author    = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
+  title     = {Introduction to Algorithms, Third Edition},
+  year      = {2009},
+  isbn      = {0262033844},
+  publisher = {The MIT Press},
+  edition   = {3rd},
+  annote    = {This is a popular algorithms textbook which is well-cited. In particular, Part VI on graph algorithms will be of interest. Chapter 26 discusses flow networks and introduces commonly used notation. It formally describes the problem of obtaining a maximum flow and its equivalence to obtaining a minimum cut. The classical method of Ford and Fulkerson's algorithm for finding a maximum flow is described, and it includes several examples. Additional methods for obtaining a maximum flow, including the push-relabel method, are also described. The chapter notes include additional references to specific articles which may be helpful, such as those of historical interest (the article in which an algorithm was originally proposed) as well as state-of-the-art improvements (more recent articles to improve the approach).}
 }
+
+@inproceedings{10.1145/3727648.3727679,
+  author    = {Yu, Ying and Tian, Yuhe},
+  title     = {Research Application of Computer Vision-Based Convolutional Neural Network in Handwriting Recognition Technology},
+  year      = {2025},
+  isbn      = {9798400712647},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/3727648.3727679},
+  doi       = {10.1145/3727648.3727679},
+  abstract  = {With the rapid development of artificial intelligence technology, handwriting recognition technology plays an important role in many fields. In this paper, the handwriting recognition technology based on convolutional neural network is studied in depth, the basic structure of convolutional neural network is introduced, the construction process of handwriting recognition system is described, and the effectiveness and superiority of the technology is verified through model training and experiments.},
+  booktitle = {Proceedings of the 4th International Conference on Computer, Artificial Intelligence and Control Engineering},
+  pages     = {177–181},
+  numpages  = {5},
+  keywords  = {Artificial Intelligence, Computer Vision, Convolutional Neural Networks, Handwriting Recognition},
+  location  = {
+               },
+  series    = {CAICE '25}
+}
+
