Add annotation summary for Software Optimization and Design Methodology for Low Power Computer Vision Systems

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -38,5 +38,6 @@
   month      = dec,
   articleno  = {19},
   numpages   = {31},
-  keywords   = {Optimization, neural architecture search, parallelization, embedded machine learning}
+  keywords   = {Optimization, neural architecture search, parallelization, embedded machine learning},
+  annote     = {This article written by Soonhoi Ha, a professor of Computer Science and Engineering, and Eunjin Jeong, a post-doctoral researcher in the same field, in 2024 discusses computer vision systems designed both for accuracy and system constraints. It encourages the use of specialized hardware to optimize computer vision systems with deep learning. They suggest reducing redundancy in deep learning with approximate computing that does not cause significant accuracy loss. Examples in this article demonstrate systems with several convolutional layers followed by a few fully connected layers. The article goes on to discuss the results of implementing different types of quantization, quantization being the reduction of bits in representation, pruning of unnecessary parameters, reduction of large-size kernels to reduce storage requirements and computation time, and other optimization techniques. The article also strongly emphasizes when different types of hardware such as GPUs can be used to process layers. This article has been downloaded hundreds of times and continues to be downloaded frequently but it has no recorded citations on the ACM Digital Library website. The sources the article references tend to originate from scientific journals and conferences and appear credible. The article provides specific code examples for how the elements of computer vision can be programmed which would be very applicable to work in the field, and it reinforces the understanding of the basic concepts of layers in computer vision by showing examples of their implementations.}
 }
