Add citation: Making material interactions with computer vision

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -41,3 +41,21 @@
   keywords   = {Optimization, neural architecture search, parallelization, embedded machine learning},
   annote     = {This article written by Soonhoi Ha, a professor of Computer Science and Engineering, and Eunjin Jeong, a post-doctoral researcher in the same field, in 2024 discusses computer vision systems designed both for accuracy and system constraints. It encourages the use of specialized hardware to optimize computer vision systems with deep learning. They suggest reducing redundancy in deep learning with approximate computing that does not cause significant accuracy loss. Examples in this article demonstrate systems with several convolutional layers followed by a few fully connected layers. The article goes on to discuss the results of implementing different types of quantization, quantization being the reduction of bits in representation, pruning of unnecessary parameters, reduction of large-size kernels to reduce storage requirements and computation time, and other optimization techniques. The article also strongly emphasizes when different types of hardware such as GPUs can be used to process layers. This article has been downloaded hundreds of times and continues to be downloaded frequently but it has no recorded citations on the ACM Digital Library website. The sources the article references tend to originate from scientific journals and conferences and appear credible. The article provides specific code examples for how the elements of computer vision can be programmed which would be very applicable to work in the field, and it reinforces the understanding of the basic concepts of layers in computer vision by showing examples of their implementations.}
 }
+
+@inproceedings{10.1145/3544548.3580643,
+  author    = {Gyory, Peter and Bae, S. Sandra and Yang, Ruhan and Do, Ellen Yi-Luen and Zheng, Clement},
+  title     = {Marking Material Interactions with Computer Vision},
+  year      = {2023},
+  isbn      = {9781450394215},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/3544548.3580643},
+  doi       = {10.1145/3544548.3580643},
+  abstract  = {The electronics-centered approach to physical computing presents challenges when designers build tangible interactive systems due to its inherent emphasis on circuitry and electronic components. To explore an alternative physical computing approach we have developed a computer vision (CV) based system that uses a webcam, computer, and printed fiducial markers to create functional tangible interfaces. Through a series of design studios, we probed how designers build tangible interfaces with this CV-driven approach. In this paper, we apply the annotated portfolio method to reflect on the fifteen outcomes from these studios. We observed that CV markers offer versatile materiality for tangible interactions, afford the use of democratic materials for interface construction, and engage designers in embodied debugging with their own vision as a proxy for CV. By sharing our insights, we inform other designers and educators who seek alternative ways to facilitate physical computing and tangible interaction design.},
+  booktitle = {Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},
+  articleno = {478},
+  numpages  = {17},
+  keywords  = {Computer Vision, Making, Materiality, Physical Computing, Tangible Interactions},
+  location  = {Hamburg, Germany},
+  series    = {CHI '23'}
+}
