Add annotation summary for Making material interactions with computer vision

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -57,5 +57,6 @@
   numpages  = {17},
   keywords  = {Computer Vision, Making, Materiality, Physical Computing, Tangible Interactions},
   location  = {Hamburg, Germany},
-  series    = {CHI '23'}
+  series    = {CHI '23'},
+  annote    = {This paper, written in part by the faculty of the ATLAS Institute at the University of Colorado Boulder in 2023, describes a computer vision system that can be run on a local device with a webcam. This is especially helpful as previous articles have been dependent on hardware that may not be accessible to all. This source has 5 citations showing higher engagement than the other sources investigated. The researchers in this paper investigated the creation of a Tangible User Interface system relying on computer vision rather than electronics to receive input due to the struggles novices have with devices like Arduino. They developed the beholder JavaScript library which gives users control over a device’s cameras. Beholder could then use the cameras to read ArUco markers and acquire their metadata. ArUco markers resemble QR codes. After the library was designed, it was used in the projects of students. They would create systems and physical devices for which the ArUco marker could be read by Beholder, like a little arcade machine which moved the ArUco marker when a button was pressed. The system was easy to debug because visual information could indicate issues. Limitations of the system include proper lighting and space requirements for the camera. Aside from reinforcing a basic understanding of computer vision, this source is not the most relevant. However, this article does encourage consideration of elements like perspective and lightning when considering what a computer may be required to interpret.}
 }
