Add citation: ReTrOH-UNLP: Conservation of the Historical Observational work of the Astronomical Observatory of La Plata with Computer Vision

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -60,3 +60,20 @@
   series    = {CHI '23'},
   annote    = {This paper, written in part by the faculty of the ATLAS Institute at the University of Colorado Boulder in 2023, describes a computer vision system that can be run on a local device with a webcam. This is especially helpful as previous articles have been dependent on hardware that may not be accessible to all. This source has 5 citations showing higher engagement than the other sources investigated. The researchers in this paper investigated the creation of a Tangible User Interface system relying on computer vision rather than electronics to receive input due to the struggles novices have with devices like Arduino. They developed the beholder JavaScript library which gives users control over a device’s cameras. Beholder could then use the cameras to read ArUco markers and acquire their metadata. ArUco markers resemble QR codes. After the library was designed, it was used in the projects of students. They would create systems and physical devices for which the ArUco marker could be read by Beholder, like a little arcade machine which moved the ArUco marker when a button was pressed. The system was easy to debug because visual information could indicate issues. Limitations of the system include proper lighting and space requirements for the camera. Aside from reinforcing a basic understanding of computer vision, this source is not the most relevant. However, this article does encourage consideration of elements like perspective and lightning when considering what a computer may be required to interpret.}
 }
+
+@article{10.1145/3754333,
+  author    = {Ponte Ah\'{o}n, Santiago and Aidelman, Yael and Seery, Juan and Quiroga, Facundo Manuel and Ronchetti, Franco and Hasperu\'{e}, Waldo and Iannuzzi, Matilde and Peralta, Romina and Lopez, M\'{o}nica and Bariviera, Aurelio F. and Cidale, Lydia and Gamen, Roberto},
+  title     = {ReTrOH-UNLP: Conservation of the Historical Observational Work of the Astronomical Observatory of La Plata with Computer Vision},
+  year      = {2025},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  issn      = {1556-4673},
+  url       = {https://doi.org/10.1145/3754333},
+  doi       = {10.1145/3754333},
+  abstract  = {The Observatorio Astron\'{o}mico de La Plata from the Facultad de Ciencias Astron\'{o}micas y Geof\'{\i}sicas (FCAG) of the Universidad Nacional de La Plata (UNLP) is one of the oldest observatories in South America. It has an enormous collection of observations, including thousands of spectroscopic and photographic glass plates. These observations were taken between the 1900s and the 1980s by renowned Argentine astronomers and constitute unique and unpublished records.Since 2019, the Recuperation of Historical Observational Work (ReTrOH, for its initials in Spanish) project has begun digitizing the 15,000+ samples of the spectroscopic plate collection.The digitization process for each plate is a complex, error-prone, multi-stage procedure requiring several person-hours. Consequently, a multidisciplinary team of astronomers and computer scientists was formed to develop the first system capable of assisting the user in this process. This system, designated PlateUNLP, employs signal processing algorithms and computer vision models to accelerate the process, reduce error rates, and standardizes data formats and processes. A key feature of PlateUNLP is its ability to automatically detect and record each spectrum recorded on the plates, along with the corresponding metadata, thus minimizing the need for user intervention.The developed system is publicly available under an open source license. Furthermore, while the system was developed with the ReTrOH project's requirements in mind, it could be adapted and used to assist with the digitization of thousands of other plates available around the world.PlateUNLP is therefore a first step towards making possible and practical the recovery of historical astronomical observations. Digitizing and exploiting these observations can provide a unique window into the past of our universe.},
+  note      = {Just Accepted},
+  journal   = {J. Comput. Cult. Herit.},
+  month     = jul,
+  keywords  = {Astronomy, Spectrographic records, Spectroscopic plates, Computer Vision, YOLO, Object Detection, Wavelength calibration, Dynamic Time Warping}
+}
+
