Add citation: A survey of multi-ai agent collaboration: Theories, technologies and applications

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -77,3 +77,21 @@
   keywords  = {Astronomy, Spectrographic records, Spectroscopic plates, Computer Vision, YOLO, Object Detection, Wavelength calibration, Dynamic Time Warping}
 }
 
+@inproceedings{10.1145/3745238.3745531,
+  author    = {Zhang, Xueqiang and Dong, Xiaofei and Wang, Yiru and Zhang, Dan and Cao, Feng},
+  title     = {A Survey of Multi-AI Agent Collaboration: Theories, Technologies and Applications},
+  year      = {2025},
+  isbn      = {9798400712791},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/3745238.3745531},
+  doi       = {10.1145/3745238.3745531},
+  abstract  = {As an important application of large language model(LLM), artificial intelligence agent(AI Agent) have the ability to autonomously perceive, understand, plan, memory, act, and use tools. It can automate complex tasks and effectively empower various business scenarios. Single AI Agent flexible and diverse deployment, multi-AI Agent innovative interaction and collaboration, multi-AI Agent collaboration improves the autonomy of the intelligent system by integrating the capabilities of single AI Agent. This paper provides an overview of multi-AI Agent from four aspects. Firstly, the core capabilities of AI Agent were outlined, and multi-AI Agent collaboration was introduced and its characteristics were analyzed. Secondly, the theoretical basis, key technologies, and scenario applications of multi-AI Agent collaboration were discussed, and the mechanism, architecture design, communication protocol, reinforcement learning, security and trustworthiness of multi-AI Agent collaboration were deeply studied. Thirdly, the advantages and disadvantages of multi-AI Agent collaboration in technology, application, and security directions were summarized, and frontier research and innovation directions were provided. Finally, a summary and outlook were made on the high-quality development of multi-AI Agent collaboration.},
+  booktitle = {Proceedings of the 2nd Guangdong-Hong Kong-Macao Greater Bay Area International Conference on Digital Economy and Artificial Intelligence},
+  pages     = {1875–1881},
+  numpages  = {7},
+  keywords  = {Collaborative mechanism, Communication protocol, Large language model, Multi-AI Agent collaboration, Reinforcement learning},
+  location  = {
+               },
+  series    = {DEAI '25}
+}
