Add First draft of proposal

--- a/proposal.tex
+++ b/proposal.tex
@@ -9,15 +9,15 @@
 \usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
 
 \title{\textbf{Project Topic}}
-\author{Your Name}
+\author{Miles Fike}
 
 \begin{document}
 
 \maketitle
 
-In your proposal, you will provide justification on why your project matters based on work which has been done in this area, using in-line citations~\cite{clrsAlgorithms} to refer to existing works. Include what your project will accomplish and how your software will function. 
+In your proposal, you will provide justification on why your project matters based on work which has been done in this area, using in-line citations
 
-
+This project will attempt to utilize MCP (Model Context Protocol) to link an input image, a controller that scores complexity or identifies the type of text, and a series of specialized computer vision systems that may try to read the text. The goal of the system will be to ensure that an image is processed using the specific AI that best suits its needs. The controller could work by identifying the style of an individual letter. From there, the style of the letter will be used to select a computer vision system specified to that exact font or historical style of text, like medieval gothic. 
 \newpage
 \section*{Appendix}
 A concise list of features / user stories in the order in which they will be built. A few examples are below to demonstrate the expected scope and level of granularity; you will have more features than this.
