Add citation: A User Perspective on HTR Methods for the Automatic Transcription of Rare Scripts: The Case of Codex Runicus

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -95,3 +95,23 @@
                },
   series    = {DEAI '25}
 }
+
+@article{10.1145/3519306,
+  author     = {Souibgui, Mohamed Ali and Bensalah, Asma and Chen, Jialuo and Forn\'{e}s, Alicia and Waldisp\"{u}hl, Michelle},
+  title      = {A User Perspective on HTR Methods for the Automatic Transcription of Rare Scripts: The Case of Codex Runicus},
+  year       = {2023},
+  issue_date = {December 2022},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {15},
+  number     = {4},
+  issn       = {1556-4673},
+  url        = {https://doi.org/10.1145/3519306},
+  doi        = {10.1145/3519306},
+  abstract   = {Recent breakthroughs in Artificial Intelligence, Deep Learning, and Document Image Analysis and Recognition have significantly eased the creation of digital libraries and the transcription of historical documents. However, for documents in rare scripts with few labelled training data available, current Handwritten Text Recognition (HTR) systems are too constraining. Moreover, research on HTR often focuses on technical aspects only, and rarely puts emphasis on implementing software tools for scholars in Humanities. In this article, we describe, compare, and analyse different transcription methods for rare scripts. We evaluate their performance in a real-use case of a medieval manuscript written in the runic script (Codex Runicus) and discuss advantages and disadvantages of each method from the user perspective. From this exhaustive analysis and comparison with a fully manual transcription, we raise conclusions and provide recommendations to scholars interested in using automatic transcription tools.},
+  journal    = {J. Comput. Cult. Herit.},
+  month      = mar,
+  articleno  = {72},
+  numpages   = {18},
+  keywords   = {codex runicus, human evaluation, handwritten text recognition tools, Historical manuscripts}
+}
