Added list of features to proposal

--- a/proposal.tex
+++ b/proposal.tex
@@ -22,10 +22,15 @@ I seek to create a series of interconnected computer vision AI systems that firs
 \section*{Appendix}
 A concise list of features / user stories in the order in which they will be built. A few examples are below to demonstrate the expected scope and level of granularity; you will have more features than this.
 \begin{itemize}
-	\item Default picture display on web application.
-	\item On a button-click, user can separate the image into foreground and background.
-	\item User can select a picture from their desktop.
-	\item Selected picture displays on the web application.
+	\item Computer vision systems return digital text from images of handwritten text.
+	\item User can view the extracted text.
+	\item MCP determines the best model for text extraction based on the image provided.
+	\item User can select a specific model for text extraction.
+	\item System provides feedback on the accuracy of the text extraction.
+	\item Drop box to upload an image for text extraction.
+	\item A button downloads the text into a text file.
+	\item A text box displays the tool used to read the text to clarify to the user what model was used.
+
 \end{itemize}
 
 
