Added source: What is the model context protocol (mcp)?

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -115,3 +115,10 @@
   numpages   = {18},
   keywords   = {codex runicus, human evaluation, handwritten text recognition tools, Historical manuscripts}
 }
+
+@misc{modelContextProtocol/getting-started/intro,
+  title    = {What is the Model Context Protocol (MCP)?},
+  url      = {https://modelcontextprotocol.io/docs/getting-started/intro},
+  year     = {2025},
+  keywords = {Model Context Protocol, MCP, AI model}
+}
