Added a new introduction

--- a/proposal.tex
+++ b/proposal.tex
@@ -17,7 +17,7 @@
 
 In your proposal, you will provide justification on why your project matters based on work which has been done in this area, using in-line citations
 
-I seek to create a series of interconnected computer vision AI systems that first identify a type of handwriting then properly convert the handwriting to digital text by utilizing Anthropic’s recently released Model Context Protocol. In the past, systems have been used to analyze medieval texts which are often very difficult for modern readers, and currently, many different methods for converting handwritten text utilizing AI computer vision systems exist, but many of these systems are either focused on individual styles or struggle with specific situations like ligatures. Because of the extent of previous work done in this field, I will be able to find diverse preexisting data sets with which I can train my AI systems. A user interface will be created to access the AI system required to provide context for accessing the MCP tools. Through the implementation of MCP, more specific AI models can be chosen to convert different fonts and handwriting systems to digital text rather than having one large system for all types of text.
+In the past, many different computer visions systems have been created to convert handwritten or printed text of different fonts and styles to computer readable text. These systems all tend to involve similar principles of computer vision to decipher text using systems trained on data sets of images of text. More recently Model Context Protocol (MCP) has been released. As is explained on the Model Context Protocol Website, this technology assists AI systems use of technologies by providing connections between AI systems and tools, workflows, and data sources that they need \cite{modelContextProtocol/getting-started/intro}. I intend to approach issues and limitations of transcription technologies through the implementation of MCP, more specific AI models can be chosen to convert different fonts and handwriting systems to digital text rather than having one large system for all types of text. 
 \newpage
 \section*{Appendix}
 A concise list of features / user stories in the order in which they will be built. A few examples are below to demonstrate the expected scope and level of granularity; you will have more features than this.
